--- a/README.org
+++ b/README.org
@@ -1,3 +1,3 @@
-* Hacker News Bot
+* RSS Bots
 
-  A task for [[https://flexget.com][Flexget]] that will check the [[https://news.ycombinator.com][Hacker News]] feed and send new links to a channel on IRC
+  Configurations for [[https://flexget.com][Flexget]] that will check various RSS feeds and send new posts to a channel on IRC
